:gem: Adding grid layout for remote ninjam channels
- Now we have vertical, horizontal and grid
- Adding grid layout button
- Not showing Zero DB marker in audio peak meters (more clean UI)
- Adjusting track layout buttons stylesheet

--- a/src/Common/gui/NinjamRoomWindow.ui
+++ b/src/Common/gui/NinjamRoomWindow.ui
@@ -120,10 +120,7 @@
         <height>297</height>
        </rect>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
+      <layout class="QGridLayout" name="tracksLayout">
        <property name="leftMargin">
         <number>0</number>
        </property>
