--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -49,7 +49,7 @@ NinjamTrackView[unlighted="true"][horizontal="true"] QSlider::handle:horizontal
  Border: none;
  }
 
-/* Tool buttons: track vertical/horizontal, wide/narrow and server licence buttons
+/* Tool buttons: track vertical/horizontal/grid, wide/narrow and server licence buttons
 ------------------------------------------------------------------------------------*/
 
 NinjamRoomWindow QToolButton:hover,
@@ -80,11 +80,17 @@ NinjamRoomWindow QToolButton:checked
 }
 
 
-NinjamRoomWindow QToolButton#buttonVerticalLayout:!checked{
+NinjamRoomWindow QToolButton#buttonVerticalLayout:!checked {
     border-right-color: none;
 }
-NinjamRoomWindow QToolButton#buttonHorizontalLayout:!checked{
+
+NinjamRoomWindow QToolButton#buttonGridLayout:!checked {
     border-left-color: none;
+}
+
+NinjamRoomWindow QToolButton#buttonHorizontalLayout:!checked {
+    border-left-color: none;
+    border-right-color: none;
 }
 
 
