--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -132,6 +132,7 @@
         <file>level low.png</file>
         <file>horizontal_layout.png</file>
         <file>vertical_layout.png</file>
+        <file>grid_layout.png</file>
         <file>narrow.png</file>
         <file>wide.png</file>
         <file>windows.png</file>
