--- a/src/Common/gui/chat/ChatPanel.ui
+++ b/src/Common/gui/chat/ChatPanel.ui
@@ -26,51 +26,12 @@
    <property name="bottomMargin">
     <number>6</number>
    </property>
-   <item row="1" column="0">
-    <widget class="QLineEdit" name="chatText">
-     <property name="accessibleDescription">
-      <string>Type your text to sent on the chat here</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="buttonAutoTranslate">
-     <property name="toolTip">
-      <string>Auto translate</string>
-     </property>
-     <property name="accessibleDescription">
-      <string>Turn on/off the auto translation for chat messages</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="2">
-    <widget class="QPushButton" name="buttonClear">
-     <property name="toolTip">
-      <string>clear the messages ...</string>
-     </property>
-     <property name="accessibleDescription">
-      <string>Press that button to clear your message</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="3">
+   <item row="1" column="0" colspan="3">
     <widget class="QScrollArea" name="chatScroll">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
        <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
+       <verstretch>1</verstretch>
       </sizepolicy>
      </property>
      <property name="focusPolicy">
@@ -104,6 +65,64 @@
        </sizepolicy>
       </property>
      </widget>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QPushButton" name="buttonAutoTranslate">
+     <property name="toolTip">
+      <string>Auto translate</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>Turn on/off the auto translation for chat messages</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLineEdit" name="chatText">
+     <property name="accessibleDescription">
+      <string>Type your text to sent on the chat here</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="buttonClear">
+     <property name="toolTip">
+      <string>clear the messages ...</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>Press that button to clear your message</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QLabel" name="topicLabel">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Ignored" vsizetype="MinimumExpanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Topic</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
   </layout>
