--- a/src/resources/css/common/Chat.css
+++ b/src/resources/css/common/Chat.css
@@ -26,6 +26,11 @@
     background-position: center;
 }
 
+#topicLabel
+{
+    background-color: rgba(255, 255, 255, 20);
+    padding: 3px;
+}
 
 /* Stylesheet used in chat messages widget (ChatMessagePanel).
 ------------------------------------------ */
