--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -118,3 +118,10 @@ AudioMeter
     qproperty-peakEndColor: red;
     qproperty-maxPeakColor: rgb(90, 90, 90);
 }
+
+#chatTabWidget QTabBar::tab:!selected
+{
+    background-color: rgba(255, 255, 255, 20);
+    border-left: 1px solid rgba(0, 0, 0, 30);
+    color: rgba(0, 0, 0, 120);
+}
