--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -40,15 +40,6 @@ NinjamTrackView[horizontal="true"] #panSlider
     max-width: 50px;
 }
 
-NinjamTrackView[horizontal="true"] #buttonBoost
-{
-    padding: 1px;
-    border: 1px solid rgba(0, 0, 0, 30);
-    min-width: 12px;
-}
-
-
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoost:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#lowCutButton:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#receiveButton:checked,
 NinjamTrackView QPushButton#lowCutButton:hover:checked,
@@ -81,8 +72,8 @@ NinjamTrackView[horizontal="true"] #levelSlider::handle:horizontal
 
 /* Tool buttons: track vertical/horizontal/grid, wide/narrow and server licence buttons
 ------------------------------------------------------------------------------------*/
-NinjamRoomWindow QToolButton:hover,
-NinjamRoomWindow QToolButton:hover:checked,
+QToolButton:hover,
+QToolButton:hover:checked,
 #licenceButton:hover,
 #licenceButton:hover:checked
 {
@@ -95,13 +86,11 @@ NinjamRoomWindow QToolButton:hover:!checked,
     background-color: rgba(255, 255, 255, 40);
 }
 
-NinjamRoomWindow QToolButton,
-#licenceButton
-{
-    border: 1px solid black;
-}
-
-NinjamRoomWindow QToolButton
+#buttonVerticalLayout,
+#buttonHorizontalLayout,
+#buttonGridLayout,
+#wide,
+#narrow
 {
     border: 1px solid black;
     height: 20px;
@@ -242,11 +231,6 @@ IntervalProgressWindow
     background-color: rgb(20, 20, 20);
     selection-background-color: rgb(80, 80, 80);
     selection-color: black;
-}
-
-#panelCombos QComboBox:hover
-{
-    background-color: rgb(31, 31, 31);
 }
 
 #comboBpi-topLevel
