--- a/src/resources/css/themes/Flat/BaseTrack.css
+++ b/src/resources/css/themes/Flat/BaseTrack.css
@@ -5,7 +5,8 @@
 --------------------------------*/
 
 #soloButton,
-#muteButton
+#muteButton,
+BoostSpinBox
 {
     font-size: 9px;
     border-color: rgb(110,110,110);
@@ -13,23 +14,20 @@
     color: rgb(50,50,50);
 }
 
-#buttonBoost,
 #soloButton,
-#muteButton
+#muteButton,
+BoostSpinBox
 {
     background: rgb(235, 235, 235);
 }
 
-
-#buttonBoost
+BoostSpinBox
 {
-   padding: 1px;
-   padding-top: 3px;
-   padding-bottom: 3px;
-   border-radius: 1px;
+    border-style: outset;
+    border-width: 1px;
+    max-width: 16px;
 }
 
-#buttonBoost:checked,
 QPushButton#buttonStereoInversion:checked
 {
     background-color: rgb(200, 200, 200);
@@ -37,32 +35,17 @@ QPushButton#buttonStereoInversion:checked
     border-radius: 0px;
 }
 
-#soloButton:hover,
 #muteButton:hover
 {
     color: black;
 }
 
-#buttonBoost:hover:checked
-{
-    background-color: rgb(200, 200, 200);
-    color: rgba(0, 0, 0, 160);
-    border-radius: 0px;
-}
-
-#buttonBoost:checked
-{
-    border-bottom: none;
-    border-top: none;
-    border-style: solid;
-    border-color: rgba(0, 0, 0, 60);
-}
 
 /* button colors when the track is NOT xmiting */
-BaseTrackView[unlighted="true"] #buttonBoost,
 BaseTrackView[unlighted="true"] #soloButton,
 BaseTrackView[unlighted="true"] #muteButton,
-BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
+BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion,
+BaseTrackView[unlighted="true"] BoostSpinBox
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
@@ -73,8 +56,7 @@ BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion:hover:checked
     background-color: rgb(200, 200, 200);
 }
 
-BaseTrackView[unlighted="true"] #soloButton:checked,
-BaseTrackView[unlighted="true"] #buttonBoost:checked
+BaseTrackView[unlighted="true"] #soloButton:checked
 {
     color: white;
 }
