--- a/src/resources/css/themes/Ice/BaseTrack.css
+++ b/src/resources/css/themes/Ice/BaseTrack.css
@@ -5,7 +5,8 @@
 --------------------------------*/
 
 #soloButton,
-#muteButton
+#muteButton,
+BoostSpinBox
 {
     font-size: 9px;
     padding: 2px;
@@ -13,21 +14,18 @@
     border: 1px outset rgba(0, 0, 140, 120);
 }
 
-#buttonBoost,
 #soloButton,
 #muteButton,
-QPushButton#buttonStereoInversion
+QPushButton#buttonStereoInversion,
+BoostSpinBox
 {
     background-color: rgb(180, 207, 250);
     border-radius: 6px;
 }
 
-
-#buttonBoost
+BoostSpinBox
 {
-   padding: 1px;
-   padding-top: 3px;
-   padding-bottom: 3px;
+    max-width: 16px;
 }
 
 QPushButton#buttonStereoInversion:checked
@@ -35,14 +33,6 @@ QPushButton#buttonStereoInversion:checked
     background-color: rgb(129, 181, 255);
 }
 
-#buttonBoost:checked
-{
-    background-color: rgb(129, 181, 255);
-    color: rgba(0, 0, 0, 160);
-    border: 1px inset rgba(0, 0, 140, 120);
-}
-
-#buttonBoost:hover,
 #soloButton:hover,
 #muteButton:hover
 {
@@ -55,14 +45,6 @@ QPushButton#buttonStereoInversion:hover
     background-color: rgb(204, 225, 255);
 }
 
-#buttonBoost:hover:checked
-{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop: 0.0 rgb(179,211,255);,
-        stop: 1.0 #b4673b);
-        border-color: rgb(40, 40, 40);
-}
-
 QPushButton#buttonStereoInversion:hover:checked
 {
    background-color: rgb(157, 199, 255);
@@ -70,10 +52,10 @@ QPushButton#buttonStereoInversion:hover:checked
 }
 
 /* button colors when the track is NOT xmiting */
-BaseTrackView[unlighted="true"] #buttonBoost,
 BaseTrackView[unlighted="true"] #soloButton,
 BaseTrackView[unlighted="true"] #muteButton,
-BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
+BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion,
+BaseTrackView[unlighted="true"] BoostSpinBox
 {
     background-color: rgba(0, 0, 0, 30);
     border: none;
@@ -86,8 +68,7 @@ BaseTrackView[unlighted="true"] #muteButton
 }
 
 BaseTrackView[unlighted="true"] #muteButton:checked,
-BaseTrackView[unlighted="true"] #soloButton:checked,
-BaseTrackView[unlighted="true"] #buttonBoost:checked
+BaseTrackView[unlighted="true"] #soloButton:checked
 {
     color: rgb(220, 220, 220);
 }
@@ -96,14 +77,6 @@ BaseTrackView[unlighted="true"] #soloButton:hover,
 BaseTrackView[unlighted="true"] #muteButton:hover
 {
     color: rgb(80, 80, 80);
-}
-
-#buttonBoost:checked
-{
-    border-bottom: none;
-    border-top: none;
-    border-style: solid;
-    border-color: rgba(0, 0, 0, 60);
 }
 
 #soloButton:checked
@@ -142,8 +115,7 @@ BaseTrackView[unlighted="true"] #muteButton:hover
     border-color: rgb(45, 45, 45);
 }
 
-BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked,
-BaseTrackView[unlighted="true"] #buttonBoost:hover:checked
+BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked
 {
     background-color: rgb(157, 199, 255);
 }
