black theme local channel dis. fix

--- a/src/resources/css/themes/Black_nm/LocalTrack.css
+++ b/src/resources/css/themes/Black_nm/LocalTrack.css
@@ -84,6 +84,12 @@ LocalTrackView[highlighted="true"]
     stop:1 rgb(40, 40, 40));
 }
 
+LocalTrackView[unlighted="true"],
+LocalTrackGroupView[unlighted="true"] #topPanel
+{
+    background: rgb(40, 40, 40);
+}
+
 LocalTrackView #inputSelectionButton            /* Button used to open the input selection menu */
 {
     background-color: none;
