--- a/src/resources/css/themes/Volcano_nm/LocalTrack.css
+++ b/src/resources/css/themes/Volcano_nm/LocalTrack.css
@@ -74,6 +74,12 @@ LocalTrackView[highlighted="true"]
     background: rgba(255, 255, 255, 40);
 }
 
+LocalTrackView[unlighted="true"],
+LocalTrackGroupView[unlighted="true"] #topPanel
+{
+    background: rgb(193, 106, 48);
+}
+
 LocalTrackView #inputPanel
 {
     background-color: rgba(255, 106, 0, 100);
