--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -194,12 +194,7 @@ selection-color: rgb(254, 181, 102);
 
 #panelCombos QComboBox:hover
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-        stop: 0.0 rgb(184, 149, 124),
-        stop: 0.1 rgb(227, 183, 153),
-        stop: 0.45 rgb(227, 183, 153),
-        stop: 0.6 rgb(184, 149, 124),
-        stop: 1.0 rgb(184, 149, 124));
+    background-color: rgb(184, 149, 124);
 }
 
 #comboBpi-topLevel,
