All themes color fixes (#913) (close #911)
* black theme local channel dis. fix

* volcano theme local channel dis. fix

* rounded theme xmit font color dis. fix

* combobox hover color match fix

* localchan dis fader-pan hover fix

* panelcombos hover fix

--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -244,6 +244,11 @@ IntervalProgressWindow
     selection-color: black;
 }
 
+#panelCombos QComboBox:hover
+{
+    background-color: rgb(31, 31, 31);
+}
+
 #comboBpi-topLevel
 {
     background-color: qlineargradient(x1:0, y1:0, x2:1, y2:0,
