:gem: Adding collapse buttons to chat, bottom area and local channels (close #142)
- Putting collapse buttons in right corder of tab widget
- Collapsing local tracks
- Collapsing bottom area
- Collapsing chat

- Dropping the CustomTabWidget class and showing the performance monitor in the right corner of QTabWidget

- Spliting MetronomePanel from NinjamPanel to have more flexibility in layout

--- a/src/resources/css/common/MainWindow.css
+++ b/src/resources/css/common/MainWindow.css
@@ -9,6 +9,30 @@
 }
 
 
+QPushButton#buttonCollapseBottom,
+QPushButton#buttonCollapseChat,
+QPushButton#buttonCollapseLocalTracks
+{
+    border: none;
+    padding: 1px;
+    margin: 0px;
+}
+
+QPushButton#buttonCollapseBottom:!checked,
+QPushButton#buttonCollapseChat:!checked,
+QPushButton#buttonCollapseLocalTracks:!checked
+{
+    background: none;
+}
+
+QLabel#labelPerformanceMonitor
+{
+    background-color: rgba(0, 0, 0, 30);
+    color: rgba(255, 255, 255, 140);
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
 /* Zoom buttons in main window right bottom corner */
 #zoomInButton,
 #zoomOutButton
