--- a/src/resources/css/themes/Ice/MainWindow.css
+++ b/src/resources/css/themes/Ice/MainWindow.css
@@ -20,16 +20,9 @@
 }
 
 #masterTitleLabel,
-#labelMetronomeIControls
+#labelMetronome
 {
     color: rgb(40, 40, 40);
-}
-
-#masterMeter
-{
-    max-height: 4px;
-    height: 4px;
-    margin: 0px;
 }
 
 #userNameLineEdit
