--- a/src/resources/css/themes/Rounded/MainWindow.css
+++ b/src/resources/css/themes/Rounded/MainWindow.css
@@ -6,16 +6,9 @@
 }
 
 #masterTitleLabel,
-#labelMetronomeIControls
+#labelMetronome
 {
     color: rgb(110, 110,110);
-}
-
-#masterMeter
-{
-    max-height: 2px;
-    height: 2px;
-    margin: 0px;
 }
 
 /* text input fields */
