--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -155,14 +155,15 @@ NinjamTrackGroupView > #topPanel                /* the track group top panel: us
 
 /* NinjamPanel is the widget where the ninjam controls are showed (in bottom when we are connected in a server)
 ----------------------------------------------------------------------------------------------------------------*/
-NinjamPanel #ninjamControlsPanel
+NinjamPanel
 {
     background-color: rgba(0, 0, 0, 20);
     border: 1px inset rgba(60, 60, 60, 90);
+    border-radius: 3px;
 }
 
-NinjamPanel #soloButton,
-NinjamPanel #muteButton
+MetronomePanel #soloButton,
+MetronomePanel #muteButton
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop: 0.0 #FDE5A9,
