--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -34,7 +34,7 @@
      <number>6</number>
     </property>
     <item row="0" column="1">
-     <widget class="CustomTabWidget" name="contentTabWidget">
+     <widget class="QTabWidget" name="contentTabWidget">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>1</horstretch>
@@ -102,7 +102,7 @@
              <x>0</x>
              <y>0</y>
              <width>843</width>
-             <height>308</height>
+             <height>302</height>
             </rect>
            </property>
           </widget>
@@ -133,38 +133,29 @@
     </item>
     <item row="1" column="1" colspan="2">
      <widget class="QWidget" name="bottomPanel" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="styleSheet">
-       <string notr="true"/>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_2" columnstretch="1">
+      <layout class="QHBoxLayout" name="bottomPanelLayout">
+       <property name="spacing">
+        <number>24</number>
+       </property>
        <property name="sizeConstraint">
         <enum>QLayout::SetDefaultConstraint</enum>
        </property>
        <property name="leftMargin">
-        <number>3</number>
+        <number>6</number>
        </property>
        <property name="topMargin">
-        <number>0</number>
+        <number>6</number>
        </property>
        <property name="rightMargin">
-        <number>3</number>
+        <number>6</number>
        </property>
        <property name="bottomMargin">
-        <number>0</number>
+        <number>6</number>
        </property>
-       <property name="verticalSpacing">
-        <number>0</number>
-       </property>
-       <item row="0" column="0" alignment="Qt::AlignHCenter">
+       <item>
         <widget class="QFrame" name="masterControlsPanel">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+          <sizepolicy hsizetype="Fixed" vsizetype="Maximum">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -183,7 +174,7 @@
          </property>
          <layout class="QVBoxLayout" name="masterControlsLayout" stretch="0,0,0">
           <property name="spacing">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="sizeConstraint">
            <enum>QLayout::SetDefaultConstraint</enum>
@@ -191,7 +182,13 @@
           <property name="leftMargin">
            <number>0</number>
           </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
           <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
            <number>0</number>
           </property>
           <item alignment="Qt::AlignVCenter">
@@ -251,7 +248,26 @@
            </layout>
           </item>
           <item>
-           <widget class="AudioMeter" name="masterMeter" native="true"/>
+           <widget class="AudioMeter" name="masterMeter" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>180</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>180</width>
+              <height>16777215</height>
+             </size>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -684,12 +700,6 @@
    <class>Slider</class>
    <extends>QSlider</extends>
    <header>Slider.h</header>
-  </customwidget>
-  <customwidget>
-   <class>CustomTabWidget</class>
-   <extends>QTabWidget</extends>
-   <header>CustomTabWidget.h</header>
-   <container>1</container>
   </customwidget>
   <customwidget>
    <class>UserNameLineEdit</class>
