--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -63,6 +63,11 @@ NinjamRoomWindow #labelBpmBpi                                /* label used to sh
 /* NinjamPanel - Appears in bottom when connected in a server
 ---------------------------- */
 
+NinjamPanel{
+    border: 2px solid red;
+    background: red;
+}
+
 NinjamPanel #intervalPanel                  /* The widget used to show ninjam controls (bpi, bpm, accent and shape) and interval progress */
 {
     color: black;
@@ -114,27 +119,30 @@ NinjamPanel #intervalPanel                  /* The widget used to show ninjam co
 
 /* ------------------------------------------------------------------ */
 
-NinjamPanel #metronomeControls,             /* Making the metronome and comboboxes area transparent */
+
+/* Making the comboboxes area transparent */
 NinjamPanel #panelCombos
 {
     background: transparent;
 }
 
 /* Changing the metronome level and pan sliders */
-NinjamPanel QSlider::groove:vertical{
+MetronomePanel QSlider::groove:vertical
+{
     width: 5px;
     margin: 0px;
     background: rgba(0, 0, 0, 40);
 }
 
-NinjamPanel QSlider::groove:horizontal{
+MetronomePanel QSlider::groove:horizontal
+{
     background-color: rgba(0,0, 0, 40);
 }
 /* ---------------------------------------------------------------*/
 
 
-NinjamPanel #preferencesButton,             /* Button used to open metronome preferences */
-NinjamPanel #floatingWindowButton           /* The button used to open the metronome floating window */
+MetronomePanel #preferencesButton,             /* Button used to open metronome preferences */
+MetronomePanel #floatingWindowButton           /* The button used to open the metronome floating window */
 {
     background-repeat: none;
     background-position: center center;
@@ -142,10 +150,10 @@ NinjamPanel #floatingWindowButton           /* The button used to open the metro
     padding-right: 0px;
 }
 
-NinjamPanel #preferencesButton,
-NinjamPanel #floatingWindowButton,
-NinjamPanel #soloButton,
-NinjamPanel #muteButton
+MetronomePanel #preferencesButton,
+MetronomePanel #floatingWindowButton,
+MetronomePanel #soloButton,
+MetronomePanel #muteButton
 {
     max-width: 20px;
     max-height: 16px;
@@ -154,23 +162,15 @@ NinjamPanel #muteButton
     padding-bottom: 1px;
 }
 
-NinjamPanel #preferencesButton
-{
-   background-image: url(':/images/gear-hover.png');
-}
-
-NinjamPanel #floatingWindowButton
-{
-    background-image: url(':/images/windows.png');
-}
-
-NinjamPanel QLabel                          /* metronome, pan (L & R) labels, BPI and BPM labels */
+/* metronome, pan (L & R) labels, BPI and BPM labels */
+NinjamPanel QLabel,
+MetronomePanel QLabel
 {
     color: rgba(0, 0, 0, 150);
     font-size: 11px;
 }
 
-#labelMetronomeIControls                    /* the label used to show the word 'metronome' */
+#labelMetronome                    /* the label used to show the word 'metronome' */
 {
     margin-top: 6px;
 }
