local channel name placeholder font fix

--- a/src/resources/css/themes/Volcano_nm/LocalTrack.css
+++ b/src/resources/css/themes/Volcano_nm/LocalTrack.css
@@ -151,3 +151,8 @@ LocalTrackView[unlighted="true"] #buttonLooper
     background-color: rgba(0, 0, 0, 30);
     border: none;
 }
+
+LocalTrackGroupView #groupNameField
+{
+    font-size: 10px;
+}
