--- a/src/resources/css/themes/Ice/LocalTrack.css
+++ b/src/resources/css/themes/Ice/LocalTrack.css
@@ -156,3 +156,8 @@ LocalTrackView[unlighted="true"] #buttonLooper
     background-color: rgba(0, 0, 0, 30);
     border: none;
 }
+
+LocalTrackGroupView #groupNameField
+{
+    font-size: 10px;
+}
