--- a/src/resources/css/themes/Rounded/LocalTrack.css
+++ b/src/resources/css/themes/Rounded/LocalTrack.css
@@ -140,3 +140,8 @@ LocalTrackView[unlighted="true"] #buttonBoost:!checked
     background-color: rgba(0, 0, 0, 30);
     border: none;
 }
+
+LocalTrackGroupView #groupNameField
+{
+    font-size: 10px;
+}
