--- a/src/resources/css/themes/Black_nm/MainWindow.css
+++ b/src/resources/css/themes/Black_nm/MainWindow.css
@@ -76,14 +76,14 @@ QMainWindow
 }
 
 #contentTabWidget:pane,
-#chatTabWidget:pane
+#chatTabWidget
 {
     border: none;
     padding: 0px;
 }
 
 
-#chatTabWidget:pane,
+#chatTabWidget QStackedWidget,
 #chatTabWidget QTabBar::tab
 {
     background-color: rgb(20, 20, 20);
