--- a/src/resources/css/themes/Flat/MainWindow.css
+++ b/src/resources/css/themes/Flat/MainWindow.css
@@ -65,14 +65,14 @@ QMainWindow
 }
 
 #contentTabWidget:pane,
-#chatTabWidget:pane
+#chatTabWidget
 {
     border: none;
     padding: 0px;
 }
 
 
-#chatTabWidget:pane,
+#chatTabWidget QStackedWidget,
 #chatTabWidget QTabBar::tab
 {
     background-color: rgb(160, 160, 160);
