--- a/src/resources/css/themes/Ice/MainWindow.css
+++ b/src/resources/css/themes/Ice/MainWindow.css
@@ -77,14 +77,14 @@ QMainWindow
 }
 
 #contentTabWidget:pane,
-#chatTabWidget:pane
+#chatTabWidget
 {
     border: none;
     padding: 0px;
 }
 
 
-#chatTabWidget:pane
+#chatTabWidget QStackedWidget
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 rgb(180, 207, 250),
