--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -258,9 +258,10 @@ QSlider::handle:vertical
 
 
 /* TabBar ----------------------*/
+
 QTabBar::tab
 {
-    background-color: rgba(174, 83, 27, 180); /* rgb(200, 200, 200);*/
+    background-color: rgba(174, 83, 27, 180);
     color: lightgray;
 }
 
