--- a/src/resources/css/themes/Black_nm/Dialogs.css
+++ b/src/resources/css/themes/Black_nm/Dialogs.css
@@ -29,7 +29,13 @@ UserNameDialog #label
     color: rgb(160, 160, 160);
 }
 
-PreferencesDialog #tabAudio, #tabMidi, #tabVST, #tabRecording, #tabMetronome, #tabLooper
+PreferencesDialog #tabAudio,
+PreferencesDialog #tabMidi,
+PreferencesDialog #tabVST,
+PreferencesDialog #tabRecording,
+PreferencesDialog #tabMetronome,
+PreferencesDialog #tabLooper,
+PreferencesDialog #tabRemember
 {
     border: 1px solid rgb(40, 40, 40);
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
