:gem: Reminding users if first channel is not transmiting for long time (close #198)
- implemented for first channel only. Use the same approach for the second channel will be anoying for users since the 2nd channel is often not xmiting.

--- a/src/resources/css/common/LocalTrack.css
+++ b/src/resources/css/common/LocalTrack.css
@@ -135,6 +135,14 @@ LocalTrackView #buttonLooper
     color: rgb(0, 40, 0);
 }
 
+#xmitButton:!checked[blinking="true"]
+{
+    background-color: orange;
+    border-color: #B57200;
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+}
 
 
 /* LocalTrackGroup (used as container to group tracks/subchannels)
