:bug: Fixing license button transparency in some themes (fix #940)

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -18,7 +18,8 @@ NinjamRoomWindow #labelBpmBpi                                /* label used to sh
 #buttonHorizontalLayout,
 #buttonGridLayout,
 #wide,
-#narrow
+#narrow,
+#licenceButton
 {
     min-width: 24px;
 }
