--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -117,6 +117,8 @@ AudioMeter
     qproperty-peakStartColor: green;
     qproperty-peakEndColor: red;
     qproperty-maxPeakColor: rgb(90, 90, 90);
+
+    qproperty-drawSegments: true; /* By default all themes will draw segments in peak meters */
 }
 
 #chatTabWidget QTabBar::tab:!selected
